# bitvm2-covenant

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
covenant-lib/: Cargo.toml
covenant-lib/src/: lib.rs
guest/: Cargo.toml
guest-std/: Cargo.toml
guest-std/src/: main.rs
guest/src/: main.rs
host/: Cargo.toml
host-network/: Cargo.toml  proving.sh
host-network/output/: snark_proof_with_public_inputs.json
host-network/src/: main.rs
host/src/: main.rs
