[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace]
members = [
    "host",
    "guest-std",
    "covenant-lib"
]
resolver = "2"

default-members = ["host", "guest-std"]

[workspace.dependencies]
zkm-sdk = { git = "https://github.com/zkMIPS/zkMIPS" }
zkm-build = { git = "https://github.com/zkMIPS/zkMIPS" }
zkm-verifier = { git = "https://github.com/zkMIPS/zkMIPS", features = ["ark"] }
zkm-zkvm = { git = "https://github.com/zkMIPS/zkMIPS" }
hex = "0.4.3"
