[package]
name = "covenant-lib"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
revm = { git = "https://github.com/zkMIPS/revm", branch = "zkm2", default-features = false, features = [ "serde", "optional_no_base_fee", "optional_balance_check" ] }
guest = { git = "https://github.com/zkMIPS/revme", package = "guest", branch = "cbor-zkm2" }
models = { git = "https://github.com/zkMIPS/revme", package = "models", branch = "cbor-zkm2" }
zkm2-zkvm = { git = "https://github.com/zkMIPS/zkm2", branch = "dev/init", package = "zkm2-zkvm" }

k256 = { version = "0.13.3", features = ["ecdsa"], default-features = false }
libc = { version = "0.2", features = ["extra_traits"] }
hex = "0.4.3"
