[package]
name = "bitvm2-covenant-guest"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
revm = { git = "https://github.com/zkMIPS/revm", branch = "zkm2", default-features = false, features = [ "serde" ] }
guest-std = { git = "https://github.com/zkMIPS/revme", package = "guest-std", branch = "cbor-zkm2" }

k256 = { version = "0.13.3", features = ["ecdsa"], default-features = false }
libc = { version = "0.2", features = ["extra_traits"] }
hex = "0.4.3"

covenant-lib = { path = "../covenant-lib" }

