[workspace]
[package]
name = "bitvm2-covenant"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
revm = { git = "https://github.com/zkMIPS/revm", branch = "zkMIPS", default-features = false, features = [ "serde", "optional_no_base_fee", "optional_balance_check" ] }
k256 = { version = "0.13.3", features = ["ecdsa"], default-features = false }
libc = { version = "0.2", features = ["extra_traits"] }
zkm-zkvm = { git = "https://github.com/zkMIPS/zkMIPS", package = "zkm-zkvm" }

covenant-lib = { path = "../covenant-lib" }
