[package]
name = "bitvm2-covenant-host-network"
version.workspace = true
edition.workspace = true

[dependencies]
#zkm-sdk = { git = "https://github.com/zkMIPS/zkm-project-template", branch = "main", features = ["snark"] }
zkm-sdk = {path = "../../zkm-project-template/sdk", features = ["snark"]}
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
env_logger = "0.10.2"
hex = "0.4.3"
bincode = "1.3.3"
guest-std = { git = "https://github.com/zkMIPS/revme", package = "guest-std", branch = "zkMIPS" }
log = "0.4.27"
base64 = "0.21.7"
common = { git = "https://github.com/zkMIPS/zkm-prover", branch = "main", default-features = false }
anyhow = "1.0.97"
[build-dependencies]
zkm-build = { workspace = true }