[package]
name = "bitvm2-covenant-host"
version.workspace = true
edition.workspace = true

[dependencies]
zkm2-sdk = { workspace = true }
zkm2-prover = { workspace = true }
zkm2-verifier = { workspace = true }
hex = { workspace = true }
ark-bn254 = { version = "0.5" }
ark-groth16 = { version = "0.5" }
guest-std = { git = "https://github.com/zkMIPS/revme", package = "guest-std", branch = "cbor-zkm2" }

[build-dependencies]
zkm2-build = { workspace = true }
